[gd_scene load_steps=18 format=3 uid="uid://0287u7bkbm56"]

[ext_resource type="Script" uid="uid://25tlmv4ec75s" path="res://scripts/proximity_mine.gd" id="1_fck1g"]
[ext_resource type="Texture2D" uid="uid://b8e51tbtfk7x3" path="res://assets/art/proximity_mine_v1.png" id="1_lwjlu"]
[ext_resource type="Texture2D" uid="uid://bkhwwa5xadhn4" path="res://assets/art/proximity_mine_light_v1.png" id="2_fck1g"]
[ext_resource type="Script" uid="uid://p0s2wxxv800u" path="res://scripts/fall_animation_config.gd" id="2_u3bxi"]
[ext_resource type="Texture2D" uid="uid://w6kplvfdaudc" path="res://assets/art/proximity_mine_range_line_v1.png" id="4_n8pgp"]
[ext_resource type="Texture2D" uid="uid://bf667fh16sk6k" path="res://assets/art/explosion_anim_v2.png" id="5_n6sr2"]
[ext_resource type="AudioStream" uid="uid://b4ax4tm3dvanm" path="res://assets/sfx/Explosion.mp3" id="6_7d6rn"]

[sub_resource type="Resource" id="Resource_kvxx3"]
script = ExtResource("2_u3bxi")
angle_duration = 1.0
scale_duration = 1.0
alpha_duration = 1.0
angle_target = 9.42478
scale_target = Vector2(0, 0)
alpha_target = 0.0
metadata/_custom_type_script = "uid://p0s2wxxv800u"

[sub_resource type="CircleShape2D" id="CircleShape2D_lwjlu"]
radius = 117.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7d6rn"]
atlas = ExtResource("5_n6sr2")
region = Rect2(0, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_u3bxi"]
atlas = ExtResource("5_n6sr2")
region = Rect2(79, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvxx3"]
atlas = ExtResource("5_n6sr2")
region = Rect2(158, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_8refg"]
atlas = ExtResource("5_n6sr2")
region = Rect2(237, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_m8q4w"]
atlas = ExtResource("5_n6sr2")
region = Rect2(316, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_frfxg"]
atlas = ExtResource("5_n6sr2")
region = Rect2(395, 0, 79, 79)

[sub_resource type="AtlasTexture" id="AtlasTexture_nnr3v"]
atlas = ExtResource("5_n6sr2")
region = Rect2(474, 0, 79, 79)

[sub_resource type="SpriteFrames" id="SpriteFrames_nnr3v"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7d6rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u3bxi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvxx3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8refg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m8q4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frfxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nnr3v")
}],
"loop": false,
"name": &"explode",
"speed": 10.0
}]

[node name="ProximityMine" type="Area2D"]
collision_layer = 2
script = ExtResource("1_fck1g")
fall_animation_config = SubResource("Resource_kvxx3")

[node name="MineSprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("1_lwjlu")

[node name="LightSprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("2_fck1g")

[node name="RangeSprite" type="Sprite2D" parent="."]
scale = Vector2(3, 3)
texture = ExtResource("4_n8pgp")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_lwjlu")

[node name="Explosion" type="AnimatedSprite2D" parent="."]
visible = false
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_nnr3v")
animation = &"explode"

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="ExplosionSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_7d6rn")
volume_db = 3.0
attenuation = 1.36604
panning_strength = 2.0
bus = &"Misc"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_explosion_timer_timeout"]
